[package]
name = "tunneltimeserver"
version = "0.1.0"
authors = ["Quinten Palmer <quintenpalmer@gmail.com>"]

[dependencies]
tunneltimecore = {path = "../tunneltimecore"}
serde = "1.0.0"
serde_json = "1.0.0"
postgres = "0.15"

postgres_extra = {path = "../postgres_extra"}
postgres_extra_derive = {path = "../postgres_extra_derive"}

futures = "0.1"
hyper = "0.11"
url = "1.7"
